# Projekt-winda

./: CMakeLists.txt  README.md  elevator.cpp  elevator.hpp  main.cpp  window.cpp  window.hpp
